[gd_scene load_steps=16 format=3 uid="uid://ba07na7oy5y1l"]

[ext_resource type="Script" path="res://ui/in_game/pause_menu/pause_menu.gd" id="1_fmnyi"]
[ext_resource type="Texture2D" uid="uid://7hi70ovf7k3g" path="res://sprites/button_normal.png" id="2_km038"]
[ext_resource type="Texture2D" uid="uid://bca3k08e10j22" path="res://sprites/button_hover.png" id="3_yuyiq"]
[ext_resource type="Texture2D" uid="uid://duatns6hyih11" path="res://sprites/button_pressed.png" id="4_ioym6"]

[sub_resource type="Theme" id="Theme_f0jut"]
default_font_size = 35

[sub_resource type="Theme" id="Theme_fah6k"]
default_font_size = 20

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xv7n8"]
texture = ExtResource("2_km038")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_idypl"]
texture = ExtResource("3_yuyiq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kaenx"]
texture = ExtResource("4_ioym6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a03kk"]
texture = ExtResource("2_km038")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2y7fe"]
texture = ExtResource("3_yuyiq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jf3r5"]
texture = ExtResource("4_ioym6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g20i8"]
texture = ExtResource("2_km038")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lsfkk"]
texture = ExtResource("3_yuyiq")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_81vew"]
texture = ExtResource("4_ioym6")

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmnyi")

[node name="canvas" type="CanvasLayer" parent="."]

[node name="paused" type="Label" parent="canvas"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.468
anchor_right = 0.5
anchor_bottom = 0.468
offset_left = -61.5
offset_top = -148.44
offset_right = 61.5
offset_bottom = -99.44
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_f0jut")
text = "Paused"

[node name="resume_button" type="Button" parent="canvas"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.468
anchor_right = 0.5
anchor_bottom = 0.468
offset_left = -68.0
offset_top = -94.44
offset_right = 68.0
offset_bottom = -36.44
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fah6k")
theme_override_styles/normal = SubResource("StyleBoxTexture_xv7n8")
theme_override_styles/hover = SubResource("StyleBoxTexture_idypl")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kaenx")
text = "Resume"

[node name="settings_button" type="Button" parent="canvas"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.467
anchor_right = 0.5
anchor_bottom = 0.467
offset_left = -68.0
offset_top = -29.36
offset_right = 68.0
offset_bottom = 28.64
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fah6k")
theme_override_styles/normal = SubResource("StyleBoxTexture_a03kk")
theme_override_styles/hover = SubResource("StyleBoxTexture_2y7fe")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jf3r5")
text = "Settings"

[node name="quit_to_menu_button" type="Button" parent="canvas"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.468
anchor_right = 0.5
anchor_bottom = 0.468
offset_left = -68.0
offset_top = 36.56
offset_right = 68.0
offset_bottom = 94.56
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fah6k")
theme_override_styles/normal = SubResource("StyleBoxTexture_g20i8")
theme_override_styles/hover = SubResource("StyleBoxTexture_lsfkk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_81vew")
text = "Quit to Menu"

[connection signal="pressed" from="canvas/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="canvas/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="canvas/quit_to_menu_button" to="." method="_on_quit_to_menu_button_pressed"]
